resources/services/backplane/api-integration-public-backplane-devshift-net.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api-integration-backplane-devshift-net
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '3600'
    service.beta.kubernetes.io/aws-load-balancer-internal: 'false'
    # backplane-api does not support proxy-protocol so we cannot enable this here
    # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/service/nlb/#protocols
    # service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8001
  type: LoadBalancer
  selector:
    app: backplane-api
  loadBalancerSourceRanges:
  - 52.70.201.140/32
  - 52.6.0.240/32
  # @patmarti: to be removed after tests
  - 88.127.131.222/32
