resources/services/backplane/api-integration-backplane-devshift-net.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 1h
    haproxy.router.openshift.io/timeout-tunnel: 2h
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-devshiftnet-dns
    haproxy.router.openshift.io/ip_whitelist: 52.70.201.140 52.6.0.240
  labels:
    app: backplane-api
    router: apps2
  name: api-public
spec:
  host: api.integration.backplane.devshift.net
  port:
    targetPort: 8001
  to:
    kind: Service
    name: backplane-api
    weight: 100
  tls:
    termination: reencrypt
  wildcardPolicy: None
