resources/services/backplane/api-integration-backplane-devshift-net.networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-integration-backplane-devshift-net
spec:
  podSelector:
    matchLabels:
      app: backplane-api
  ingress:
    - {}
  policyTypes:
    - Ingress
